--- a/PA1_template.html
+++ b/PA1_template.html
@@ -55,8 +55,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 
 
-<div id="unziping-file" class="section level2">
-<h2>Unziping file</h2>
+<div id="unziping-the-activity.zip-file" class="section level2">
+<h2>Unziping the activity.zip file</h2>
 <pre class="r"><code>fname &lt;- unzip('activity.zip', list=TRUE)$Name[1]
 unzip('activity.zip', files=fname, overwrite=TRUE)</code></pre>
 </div>
